# MyGameEngine

./: .gitignore  CMakeLists.txt  README.md
Empty/: EmptyApplication.cpp
Framework/Common/: Allocator.cpp  Allocator.hpp  AssetLoader.cpp  AssetLoader.hpp  BaseApplication.cpp  BaseApplication.hpp  CMakeLists.txt  GraphicsManager.cpp  GraphicsManager.hpp  MemoryManager.cpp  MemoryManager.hpp  MyGameEngine.cpp
Framework/Interface/: IApplication.hpp  IImageParser.hpp  IRuntimeModule.hpp
Platform/Windows/: helloengine_win.c
